# roslyn-mcp-server

./: .gitignore  AGENTS.md  README.md  config.example.json  pyproject.toml  requirements.txt
misc/: langgraph_demo.py  mcp_process_client.py
scripts/: client.py
src/roslyn_mcp_server/: bridge_server.py  client.py  client_cli.py  langgraph_demo.py  lsp_client.py  main.py  roslyn_session.py
src/roslyn_mcp_server/application/models/: requests.py  results.py
src/roslyn_mcp_server/application/services/: navigation_service.py  source_service.py  workspace_service.py
src/roslyn_mcp_server/backend/: __init__.py  client.py  manager.py  server.py
src/roslyn_mcp_server/infrastructure/: config.py  http_bridge.py  logging.py
src/roslyn_mcp_server/mcp/: server.py
src/roslyn_mcp_server/mcp/tools/: document_symbols.py  find_definition.py  find_implementations.py  find_references.py  health.py  open_solution.py  read_span.py  search_symbols.py
src/roslyn_mcp_server/roslyn/: lsp_adapter.py  session.py  translators.py
