[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "roslyn-mcp-server"
version = "0.1.0"
description = "Minimal Roslyn-backed MCP server prototype for C# navigation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
demo = ["langchain>=1,<2", "langgraph>=1,<2", "langchain-openai>=1,<2"]

[project.scripts]
roslyn-mcp-server = "roslyn_mcp_server.main:main"
roslyn-mcp-backend = "roslyn_mcp_server.backend.server:main"
roslyn-mcp-client = "roslyn_mcp_server.client_cli:main"
roslyn-mcp-http-bridge = "roslyn_mcp_server.infrastructure.http_bridge:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
